.gsd/exec/5430d99b-ab05-44cc-81c7-e376f22604ec.stdout
   Compiling bevyrogue v0.1.0 (/home/fabio/dev/bevyrogue/.gsd/worktrees/M015)
warning: unused import: `grant_free_skill_events`
  --> src/combat/turn_system/pipeline.rs:16:20
   |
16 |     apply_effects, grant_free_skill_events, resolve_action, target_shape_rejection_reason,
   |                    ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::combat::team::Team`
  --> src/combat/turn_system/pipeline.rs:23:5
   |
23 | use crate::combat::team::Team;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::combat::types::SkillId`
  --> src/combat/turn_system/pipeline.rs:25:5
   |
25 | use crate::combat::types::SkillId;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `LegalityReasonCode`
  --> src/combat/follow_up_tests.rs:22:17
   |
22 |         Effect, LegalityReasonCode, SelfTargetRule, SkillBook, SkillDef, SkillImplementation,
   |                 ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `grant_free_skill_events`
  --> src/combat/turn_system/pipeline.rs:16:20
   |
16 |     apply_effects, grant_free_skill_events, resolve_action, target_shape_rejection_reason,
   |                    ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `LegalityReasonCode`
  --> src/combat/turn_system/tests.rs:14:13
   |
14 |     Effect, LegalityReasonCode, SelfTargetRule, SkillBook, SkillDef, SkillImplementation,
   |             ^^^^^^^^^^^^^^^^^^

warning: variable does not need to be mutable
   --> src/combat/turn_system/pipeline.rs:173:13
    |
173 |             mut attacker_ult,
    |             ----^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src/combat/turn_system/pipeline.rs:181:13
    |
181 |             mut attacker_round_flags,
    |             ----^^^^^^^^^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`

warning: variable does not need to be mutable
   --> src/combat/turn_system/pipeline.rs:439:9
    |
439 |         mut attacker_ult,
    |         ----^^^^^^^^^^^^
    |         |
    |         help: remove this `mut`

warning: unused variable: `turn_order`
   --> src/combat/turn_system/pipeline.rs:130:5
    |
130 |     turn_order: &mut ResMut<TurnOrder>,
    |     ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_turn_order`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `attacker_commander`
   --> src/combat/turn_system/pipeline.rs:444:9
    |
444 |         attacker_commander,
    |         ^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_attacker_commander`

warning: field `is_stunned` is never read
   --> src/combat/follow_up.rs:303:5
    |
297 | struct FormIdentitySnapshot {
    |        -------------------- field in this struct
...
303 |     is_stunned: bool,
    |     ^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
    --> src/combat/kernel.rs:1274:13
     |
1274 |         let mut step = TacticalCycleStep::default();
     |             ----^^^^
     |             |
     |             help: remove this `mut`
     |
     = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src/combat/turn_system/pipeline.rs:173:13
    |
173 |             mut attacker_ult,
    |             ----^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`

warning: function `advance_turn_system_skips_stunned_unit_OLD` should have a snake case name
  --> src/combat/turn_system/tests.rs:80:4
   |
80 | fn advance_turn_system_skips_stunned_unit_OLD() {
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: convert the identifier to snake case: `advance_turn_system_skips_stunned_unit_old`
   |
   = note: `#[warn(non_snake_case)]` (part of `#[warn(nonstandard_style)]`) on by default

warning: function `advance_turn_system_burn_clamps_hp_and_expires_OLD` should have a snake case name
   --> src/combat/turn_system/tests.rs:121:4
    |
121 | fn advance_turn_system_burn_clamps_hp_and_expires_OLD() {
    |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: convert the identifier to snake case: `advance_turn_system_burn_clamps_hp_and_expires_old`

warning: function `advance_turn_system_freeze_updates_and_clears_speed_modifier_OLD` should have a snake case name
   --> src/combat/turn_system/tests.rs:169:4
    |
169 | fn advance_turn_system_freeze_updates_and_clears_speed_modifier_OLD() {
    |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: convert the identifier to snake case: `advance_turn_system_freeze_updates_and_clears_speed_modifier_old`

warning: function `advance_turn_system_shock_zero_percent_does_not_cancel_OLD` should have a snake case name
   --> src/combat/turn_system/tests.rs:214:4
    |
214 | fn advance_turn_system_shock_zero_percent_does_not_cancel_OLD() {
    |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: convert the identifier to snake case: `advance_turn_system_shock_zero_percent_does_not_cancel_old`

warning: function `advance_turn_system_shock_full_cancel_emits_action_failed_OLD` should have a snake case name
   --> src/combat/turn_system/tests.rs:268:4
    |
268 | fn advance_turn_system_shock_full_cancel_emits_action_failed_OLD() {
    |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: convert the identifier to snake case: `advance_turn_system_shock_full_cancel_emits_action_failed_old`

warning: function `advance_turn_system_stunned_unit_skips_status_tick_OLD` should have a snake case name
   --> src/combat/turn_system/tests.rs:321:4
    |
321 | fn advance_turn_system_stunned_unit_skips_status_tick_OLD() {
    |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: convert the identifier to snake case: `advance_turn_system_stunned_unit_skips_status_tick_old`

warning: `bevyrogue` (lib) generated 9 warnings (run `cargo fix --lib -p bevyrogue` to apply 8 suggestions)
warning: unused import: `LegalityReasonCode`
  --> tests/status_accuracy.rs:30:17
   |
30 |         Effect, LegalityReasonCode, SelfTargetRule, SkillBook, SkillDef, SkillImplementation,
   |                 ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `LegalityReasonCode`
  --> tests/boundary_contract.rs:82:17
   |
82 |         Effect, LegalityReasonCode, SelfTargetRule, SkillBook, SkillDef, SkillImplementation,
   |                 ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `LegalityReasonCode`
   --> tests/boundary_contract.rs:202:17
    |
202 |         Effect, LegalityReasonCode, SelfTargetRule, SkillBook, SkillDef, SkillImplementation,
    |                 ^^^^^^^^^^^^^^^^^^

warning: unused import: `LegalityReasonCode`
  --> tests/encounter_e2e.rs:17:17
   |
17 |         Effect, LegalityReasonCode, SelfTargetRule, SkillBook, SkillDef, SkillImplementation,
   |                 ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `LegalityReasonCode`
  --> tests/patamon_revive.rs:18:17
   |
18 |         Effect, LegalityReasonCode, SelfTargetRule, SkillBook, SkillDef, SkillImplementation,
   |                 ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `LegalityReasonCode`
  --> tests/event_stream.rs:20:17
   |
20 |         Effect, LegalityReasonCode, SelfTargetRule, SkillBook, SkillDef, SkillImplementation,
   |                 ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0063]: missing fields `holy_support` and `twin_core` in initializer of `UnitDef`
   --> tests/tempo_resistance.rs:241:5
    |
241 |     bevyrogue::data::units_ron::UnitDef {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `holy_support` and `twin_core`

error[E0063]: missing fields `holy_support` and `twin_core` in initializer of `UnitDef`
   --> tests/tempo_resistance.rs:278:5
    |
278 |     bevyrogue::data::units_ron::UnitDef {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `holy_support` and `twin_core`

error: expected `;`, found `custom_signals`
   --> tests/ultimate_meter.rs:125:6
    |
125 |     }
    |      ^ help: add `;` here
126 |
127 |     custom_signals: vec![],
    |     -------------- unexpected token

error: expected identifier, found `:`
   --> tests/ultimate_meter.rs:127:19
    |
127 |     custom_signals: vec![],
